# attendance-policy

./: .gitignore  README.md  README.qmd  pyproject.toml  requirements.txt
code/: 00_eda.py  01_eda.ipynb  01_visualize-absences.py  02_initial_analysis_line_chart.py  02_t1_diff_in_diff_absenses.py  02_tardy.py  02_visualize-tardies.py  03_diff-in-diff-absences.py  03_diff_in_diff.py  03_t1_diff_in_diff_tardies.py  04_demographic_diff_in_diff_t1.py  04_demographics_attendance.py  04_diff-in-diff-tardies.py  05_both_trimester_analysis_absenses.py  05_demographic_diff_in_diff.py  05_matching-absences.py  06_both_trimester_analysis_tardies.py  06_matching-tardies.py  06_trimester_analysis_absenses.py  06_weather.py  07_grade_analysis.py  07_trimester_analysis_tardy.py  07_weather.py  08_t2_absense_analysis.py  08_t2_analysis.py  09_niave_baseline_matching_absenses.py  09_t2_diff_in_diff.py  10_grade_anaylsis_t2_newdatae.py  10_naive_baseline_matching_tardies.py  11_demographics_analysis.py  11_demographics_newdata.py  12_matching_analysis_absenses.py  12_niave_graphing.py  12_niave_scoring.py  12_propensity_scoring.py  13_continued_prop_scoring.py  13_prop_score_cont.py  14_both_semester_data.py  14_exact matching.py  15_prop_score_without_duplicates.py  (+8 more)
presentations/: ASC.pptx
writing/: diff-in-diff.md  diff-in-diff.qmd
