[project]
name = "attendance-policy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.4"
dependencies = [
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy<=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
